pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-process
  annotations:
    policies.kyverno.io/title: Disallow hostProcess in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30+"
    policies.kyverno.io/description: >-
      Windows Pods can run HostProcess containers, which have privileged access to the
      Windows node. The Baseline profile disallows this. This policy ensures that the
      `hostProcess` field is unset or `false` at both the Pod and the container level.
spec:
  validationActions:
     - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.containers + 
          object.spec.?initContainers.orValue([]) + 
          object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        object.spec.?securityContext.?windowsOptions.?hostProcess.orValue(false) == false &&
        variables.allContainers.all(container,
          container.?securityContext.?windowsOptions.?hostProcess.orValue(false) == false)
      message: >-
        HostProcess Pods and containers are disallowed. The fields
        spec.securityContext.windowsOptions.hostProcess,
        spec.containers[*].securityContext.windowsOptions.hostProcess,
        spec.initContainers[*].securityContext.windowsOptions.hostProcess, and
        spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess
        must either be undefined or set to `false`.
